k8s/network-policies/allow-rules/payments-domain/allow-pg-to-tp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-gateway-egress
  namespace: prod-payments
spec:
  podSelector:
    matchLabels:
      app: payment-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: transaction-processor
      ports:
        - protocol: TCP
          port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-transaction-processor-ingress
  namespace: prod-payments
spec:
  podSelector:
    matchLabels:
      app: transaction-processor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-gateway
      ports:
        - protocol: TCP
          port: 8443
